# Nula

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.adoc  README.md  SECURITY.adoc  SECURITY.md
.github/workflows/: codeql.yml  rust.yml
backend/: go.mod  main.go  nula-backend.go
backend/internal/ast/: ast.go
backend/internal/interpreter/: interpreter.go
backend/internal/parser/: parser.go
cmd/: index.js  nula.js  package.json
cmd/commands/: build.js  clean.js  init.js  install.js  list.js  run.js  test.js  version.js
cmd/utils/: dirUtils.js  invoke.js  logger.js
compiler/: Cargo.toml  main.rs
compiler/src/: ast.rs  codegen.rs  main.rs  parser.rs
docs/: list-of-docs.nula
example/1/: main.nula
examples/: bottles.nula  hello.nula  main.nula  nula.toml
install/: build-from-source.ps1  build-from-source.sh  install.ps1  install.sh
install/desktop/: nula-lang.desktop  nula.Ink  nula.bat
install/desktop/windows/: nula.ps1
lib/src/: nula-packages.py
nula/: Cargo.toml  library.nula  nula.pest
nula-go/: install.go  list.go  main.go  remove.go  resolve.go  search.go  ui.go  update.go
nula-zig/: main.zig
nula/go/: main.go
nula/go/cli/: cli.go
nula/python/: main.py  parser.py  runner.py
nula/src/: ast.rs  backend.rs  build.rs  cli.rs  codegen.rs  commands.rs  compiler.rs  config.rs  cranelift_generator.rs  deps.rs  formatter.rs  generator.rs  interpreter.rs  ir.rs  lexer.rs  llvm_generator.rs  main.rs  optimizer.rs  parser.rs  process_expression.rs  project_commands.rs  repl.rs  translator.rs  typechecker.rs  utils.rs
nula/zig/: main.zig
