[package]
name = "nula-compiler"
version = "1.0.0"
edition = "2021"
description = "Compiler for the Nula programming language using Cranelift"
authors = ["xAI"]
license = "MIT"

[dependencies]
cranelift = "0.110.0"
cranelift-module = "0.110.0"
cranelift-object = "0.110.0"

[build-dependencies]
# Optional: Add if build scripts are needed
# cc = "1.0"

[profile.release]
opt-level = 3
lto = "thin"
