[package]
name = "nula-lang"
version = "0.5.0"  # Najnowsza wersja z rozbudową
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
pest = "2.7"
pest_derive = "2.7"
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
git2 = "0.18"
tempfile = "3.10"
regex = "1.10"
backtrace = "0.3"
indextree = "4.6"
prettytable = "0.10"
thiserror = "1.0"  # Dla błędów
