[package]
name = "nula"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.7"
pest_generator = "2.7"
colored = "2.1"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }  # Dla async jeśli deps

[build-dependencies]
pest_generator = "2.7"
