[package]
name = "nula"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.7.0"
pest_derive = "2.7.0"
colored = "2.0.0"
directories = "5.0.1"
walkdir = "2.3.3"
toml = "0.8.0"
cranelift-codegen = "0.91.1"
cranelift-frontend = "0.91.1"
cranelift-module = "0.91.1"
cranelift-native = "0.91.1"
cranelift-object = "0.91.1"
target-lexicon = "0.12.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
